made a basic ui and removed the map

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <!-- <section id="map-container">
       <div id="map"></div>
-    </section>
+    </section> -->
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
