added config file for map key

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,12 @@
     <link rel="stylesheet" href="./css/main-content.css">
     <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 481px)" href="./css/desktop.css">
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
-    <a href="/" id="app-title">Restaurant Reviews</a>
+        <a href="/" id="app-title">Restaurant Reviews</a>
     </header>
 
     <main class="main-content">
@@ -39,8 +41,9 @@
     <footer>
         Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
+    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>-->
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 </body>
+
 </html>
