--- a/restaurant.html
+++ b/restaurant.html
@@ -49,11 +49,15 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <table id="restaurant-hours"></table>
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
+      <div class="restaurant-info">
+          <h1 id="restaurant-name"></h1>
+          <img id="restaurant-img">
+          <div class="restaurant-tab">
+            <table align="center" id="restaurant-hours"></table>
+          </div>
+          <p id="restaurant-cuisine"></p>
+          <p id="restaurant-address"></p>    
+      </div>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
