restaurant info desktop created

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         </section>
         <section>
             <div class="filter-options">
-                <h2>Filter Results</h2>
+                <h2>Filter By</h2>
                 <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
                 <option value="all">All Neighborhoods</option>
                 </select>
                 <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
                 <option value="all">All Cuisines</option>
                 </select>
+                <button class="filter-btn">FILTER</button>
             </div>
             <ul id="restaurants-list"></ul>
         </section>
