--- a/restaurant.html
+++ b/restaurant.html
@@ -53,7 +53,7 @@
           <h1 id="restaurant-name"></h1>
           <img id="restaurant-img">
           <div class="restaurant-tab">
-            <table align="center" id="restaurant-hours"></table>
+            <table align="center" vertical-align="middle" id="restaurant-hours"></table>
           </div>
           <p id="restaurant-cuisine"></p>
           <p id="restaurant-address"></p>    
