--- a/restaurant.html
+++ b/restaurant.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 481px)" href="./css/desktop.css">
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="inside">
