--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Restaurant Reviews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="stylesheet" href="./css/media-query.css">
@@ -26,20 +26,20 @@
         <section>
             <div class="filter-options">
                 <h2>Filter By</h2>
-                <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+                <select tabindex="1" id="neighborhoods-select" name="neighborhoods">
                 <option value="all">All Neighborhoods</option>
                 </select>
-                <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+                <select tabindex="1" id="cuisines-select" name="cuisines">
                 <option value="all">All Cuisines</option>
                 </select>
-                <button class="filter-btn">FILTER</button>
+                <button tabindex="1" class="filter-btn" onclick="updateRestaurants()">FILTER</button>
             </div>
             <ul id="restaurants-list"></ul>
         </section>
     </main>
 
     <footer>
-        Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+        Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
