--- a/restaurant.html
+++ b/restaurant.html
@@ -18,13 +18,13 @@
   <link rel="stylesheet" href="./css/resto-info.css">
   <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 481px)" href="./css/desktop.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="inside">
   <header class="header">
-    <a href="/" id="app-title"></a>
+    <a href="/" id="app-title-info">Restaurant Reviews</a>
   </header>
   <!-- Beginning header -->
   <!--<header>-->
@@ -71,7 +71,7 @@
 
   <!-- Beginning footer -->
   <footer>
-    Copyright (c) 2017 <a href="/"><strong></strong></a> All Rights Reserved.
+    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.    
   </footer>
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -84,7 +84,7 @@
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
 </body>
 
 </html>
