--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./css/media-query.css">
     <link rel="stylesheet" href="./css/main-content.css">
     <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 481px)" href="./css/desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
+    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">    
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
@@ -38,8 +39,8 @@
         </section>
     </main>
 
-    <footer>
-        Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    <footer class="footer" >
+        Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
     </footer>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
