--- a/restaurant.html
+++ b/restaurant.html
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="./css/main-content.css">
   <link rel="stylesheet" href="./css/resto-info.css">
   <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
-  <link rel="stylesheet" media="screen and (min-width: 481px)" href="./css/desktop.css">
+  <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
+  <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
@@ -33,9 +34,9 @@
       <h1><a href="/"></a></h1>
     </nav>-->
   <!-- Beginning breadcrumb -->
-  <ul id="breadcrumb">
+  <!-- <ul id="breadcrumb">
     <li><a href="/">Home</a></li>
-  </ul>
+  </ul> -->
   <!-- End breadcrumb -->
   <!-- End nav -->
   <!--</header>-->
@@ -70,8 +71,8 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer>
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.    
+  <footer class="footer">
+    Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.    
   </footer>
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
