--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <a href="/" id="app-title">Restaurant Reviews</a>
+        <a href="/" id="app-title"><h1>Restaurant Reviews</h1></a>
     </header>
 
     <main class="main-content">
