--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
 
 <body class="inside">
   <header class="header">
-    <a href="/" id="app-title-info">Restaurant Reviews</a>
+      <a href="/" id="app-title"><h1>Restaurant Reviews</h1></a>
   </header>
   <!-- Beginning header -->
   <!--<header>-->
@@ -34,9 +34,9 @@
       <h1><a href="/"></a></h1>
     </nav>-->
   <!-- Beginning breadcrumb -->
-  <!-- <ul id="breadcrumb">
+  <ul class="breadcrumb" id="breadcrumb">
     <li><a href="/">Home</a></li>
-  </ul> -->
+  </ul>
   <!-- End breadcrumb -->
   <!-- End nav -->
   <!--</header>-->
@@ -52,7 +52,7 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <div class="restaurant-info">
-          <h1 id="restaurant-name"></h1>
+          <h2 id="restaurant-name"></h2>
           <img id="restaurant-img">
           <div class="restaurant-tab">
             <table align="center" vertical-align="middle" id="restaurant-hours"></table>
