service worker , workning offline now

--- a/restaurant.html
+++ b/restaurant.html
@@ -43,7 +43,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main class="main-content">
+  <main class="main-content resto-view">
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
