--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <link rel="stylesheet" href="./css/main-content.css">
     <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
-    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">    
+    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
-        <a href="/" id="app-title"><h1>Restaurant Reviews</h1></a>
+        <a href="/" id="app-title">
+            <h1>Restaurant Reviews</h1>
+        </a>
     </header>
     <main class="main-content">
         <section id="map-container">
-            <div role="link" id="map" aria-label="Map, Locations of Restuarants"></div>
+            <div role="application" id="map" aria-label="Map, Locations of Restuarants"></div>
         </section>
         <section>
             <div class="filter-options">
@@ -38,7 +40,7 @@
         </section>
     </main>
 
-    <footer class="footer" >
+    <footer class="footer">
         Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
     </footer>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
