--- a/restaurant.html
+++ b/restaurant.html
@@ -18,14 +18,16 @@
   <link rel="stylesheet" href="./css/resto-info.css">
   <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
-  <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body class="inside">
   <header role="banner" class="header">
-      <a href="/" id="app-title"><h1>Restaurant Reviews</h1></a>
+    <a href="/" id="app-title">
+      <h1>Restaurant Reviews</h1>
+    </a>
   </header>
   <!-- Beginning header -->
   <!--<header>-->
@@ -46,19 +48,19 @@
   <main role="main" class="main-content resto-view">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div role="application" id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <div class="restaurant-info">
-          <h2 id="restaurant-name"></h2>
-          <img id="restaurant-img">
-          <div class="restaurant-tab">
-            <table align="center" vertical-align="middle" id="restaurant-hours"></table>
-          </div>
-          <p id="restaurant-cuisine"></p>
-          <p id="restaurant-address"></p>    
+        <h2 id="restaurant-name"></h2>
+        <img id="restaurant-img">
+        <div class="restaurant-tab">
+          <table align="center" vertical-align="middle" id="restaurant-hours"></table>
+        </div>
+        <p id="restaurant-cuisine"></p>
+        <p id="restaurant-address"></p>
       </div>
     </section>
     <!-- end restaurant -->
@@ -72,7 +74,7 @@
 
   <!-- Beginning footer -->
   <footer class="footer" role="contentinfo">
-    Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.    
+    Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
