cached server responses in indexed DB, and working offline

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </footer>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+
 </body>
 
 </html>
