added gulp tooling

--- a/restaurant.html
+++ b/restaurant.html
@@ -88,6 +88,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
 </body>
 
 </html>
