--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurant Reviews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="stylesheet" href="./css/media-query.css">
     <link rel="stylesheet" href="./css/main-content.css">
@@ -43,9 +44,10 @@
     <footer class="footer">
         Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
     </footer>
-    <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+    <script type="application/javascript" charset="utf-8" src="./app.min.js"></script>
+    <!-- <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-    <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/idb.js"></script> -->
 
 </body>
 
