--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Restaurant Reviews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="stylesheet" href="./css/media-query.css">
     <link rel="stylesheet" href="./css/main-content.css">
     <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
     <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body>
