--- a/restaurant.html
+++ b/restaurant.html
@@ -5,13 +5,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Normalize.css for better cross-browser consistency -->
-  <!--<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />-->
-  <!-- Main CSS file -->
-  <!--<link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />-->
   <title>Restaurant Info</title>
+  <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="./css/mystyles.css">
   <link rel="stylesheet" href="./css/media-query.css">
   <link rel="stylesheet" href="./css/main-content.css">
@@ -20,7 +16,6 @@
   <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
   <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body class="inside">
@@ -29,12 +24,6 @@
       <h1>Restaurant Reviews</h1>
     </a>
   </header>
-  <!-- Beginning header -->
-  <!--<header>-->
-  <!-- Beginning nav -->
-  <!--<nav>
-      <h1><a href="/"></a></h1>
-    </nav>-->
   <!-- Beginning breadcrumb -->
   <ul role="navigation" class="breadcrumb" id="breadcrumb" aria-label="navigation">
     <li><a href="/">Home</a></li>
@@ -77,18 +66,13 @@
     Copyright (c) 2018 <a href="/"><strong>&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
   <!-- Beginning scripts -->
-  <!-- Database helpers -->
-  <script type="text/javascript" src="js/dbhelper.js"></script>
-  <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="./app.min.js"></script>
+
 </body>
 
 </html>
