added review form

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
-    <script type="application/javascript" charset="utf-8" src="./app.min.js"></script>
+    <!-- <script type="application/javascript" charset="utf-8" src="./app.min.js"></script> -->
+    <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
+    <script type="application/javascript" charset="utf-8" src="./js/main.js"></script>
+    <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script>
+    
         <script>
             initMap = () => {
 	            let loc = {
