--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="stylesheet" href="./css/media-query.css">
     <link rel="stylesheet" href="./css/main-content.css">
-    <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
-    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
+    <link async defer rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
+    <link  async defer rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
+    <link async defer rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
 </head>
 
 <body>
@@ -51,18 +51,6 @@
     <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="./js/main.js"></script>
     <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script>
-    
-        <script>
-            initMap = () => {
-	            let loc = {
-		        lat: 40.722216,
-		        lng: -73.987501
-	            };
-	            map = new google.maps.Map(document.getElementById('map'), {
-		        zoom: 12,center: loc,scrollwheel: false });
-	            updateRestaurants();
-            };
-        </script>
 </body>
 
 </html>
