--- a/restaurant.html
+++ b/restaurant.html
@@ -12,12 +12,12 @@
   <link rel="stylesheet" href="./css/media-query.css">
   <link rel="stylesheet" href="./css/main-content.css">
   <link rel="stylesheet" href="./css/resto-info.css">
-  <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
-  <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
-  <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
-  <link rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/star.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link async defer rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
+  <link async defer rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
+  <link async defer rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
+  <link async defer rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/star.css">
+  <link async defer rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link async defer rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 <body class="inside">
   <header role="banner" class="header">
@@ -48,7 +48,7 @@
         <div class="heart-icon-box">
           <i title= "Mark Favourite" role="button" aria-label="click to mark favorite" id="heart-icon" class="far fa-heart gray" onclick="markFavourite()"></i>
         </div>
-        <img id="restaurant-img">
+        <img id="restaurant-img"alt="restaurant-picture">
         <div class="restaurant-tab">
           <table align="center" vertical-align="middle" id="restaurant-hours"></table>
         </div>
@@ -85,6 +85,7 @@
   </div>
   <button title="close the review form" role="button" aria-label="cancel a  review" type="button" id="cancel-review" onclick="closeReviewForm()" >X</button>
   <button role="button" aria-label="add a review" type="button" id="add-review-btn" onclick="addRestoReview()">Add a review</button>
+
 </form>
 
   <!-- Beginning footer -->
@@ -101,7 +102,6 @@
   <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="./js/restaurant_info.js"></script>
     <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script>
-
+    
 </body>
-
 </html>
