--- a/restaurant.html
+++ b/restaurant.html
@@ -15,7 +15,7 @@
   <link async defer rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="./css/mobile.css">
   <link async defer rel="stylesheet" media="screen and (min-width: 768px) and (max-width:1024px)" href="./css/tablets.css">
   <link async defer rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/desktop.css">
-  <link async defer rel="stylesheet" media="screen and (min-width: 1025px)" href="./css/star.css">
+  <link async defer rel="stylesheet" href="./css/star.css">
   <link async defer rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link async defer rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
@@ -98,10 +98,6 @@
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
-  <!-- <script type="application/javascript" charset="utf-8" src="./app.min.js"></script> -->
-  <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
-    <script type="application/javascript" charset="utf-8" src="./js/restaurant_info.js"></script>
-    <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script>
-    
+  <script type="application/javascript" charset="utf-8" src="./app.min.js"></script> 
 </body>
 </html>
