anchor underline removed

--- a/restaurant.html
+++ b/restaurant.html
@@ -90,7 +90,7 @@
 
   <!-- Beginning footer -->
   <footer class="footer" role="contentinfo">
-    Copyright (c) 2018 <a href="/"><strong style="color:white;text-decoration: none">&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <a href="/" style="text-decoration: none"><strong style="color:white">&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <!-- Beginning scripts -->
