--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer class="footer">
-        Copyright (c) 2018 <a href="/"><strong style="color:white;text-decoration: none">&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
+        Copyright (c) 2018 <a href="/" style="text-decoration: none"><strong style="color:white">&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
     </footer>
     <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
