added restaurant.html in service worker

--- a/restaurant.html
+++ b/restaurant.html
@@ -26,7 +26,7 @@
     </a>
   </header>
   <!-- Beginning breadcrumb -->
-  <ul role="navigation" class="breadcrumb" id="breadcrumb" aria-label="navigation">
+  <ul role="navigation" aria-label="Breadcrumb" class="breadcrumb" id="breadcrumb" aria-label="navigation">
     <li><a href="/">Home</a></li>
   </ul>
   <!-- End breadcrumb -->
@@ -38,7 +38,7 @@
   <main role="main" class="main-content resto-view">
     <!-- Beginning map -->
     <section id="map-container">
-      <div role="application" id="map"></div>
+      <div role="application" aria-label="location" id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -93,11 +93,17 @@
     Copyright (c) 2018 <a href="/" style="text-decoration: none"><strong style="color:white">&nbsp Restaurant Reviews &nbsp</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
-  <!-- Beginning scripts -->
+  <!-- Beginning scripts http://localhost:8000" -->
 
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
   <script type="application/javascript" charset="utf-8" src="./app.min.js"></script> 
+  <!-- <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script> 
+  <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script> 
+  <script type="application/javascript" charset="utf-8" src="./js/restaurant_info.js"></script>  -->
+
+
+
 </body>
 </html>
