--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT3oY7Gg7TNAfPZ5WEraGFmWU1sTdomdA&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
     <script type="application/javascript" charset="utf-8" src="./app.min.js"></script>
+    <!-- <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
+    <script type="application/javascript" charset="utf-8" src="./js/idb.js"></script>
+    <script type="application/javascript" charset="utf-8" src="./js/main.js"></script> -->
 </body>
 <script>
     initMap = () => {
